# ML-Reader

./: .cmake-format.yaml  .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  GitVersion.cmake  LoadQt.cmake  LoadQt5.cmake  LoadQtKeychain.cmake  LoadQtcsv.cmake
src/: CMakeLists.txt
src/main/: Application.cpp  Application.h  CMakeLists.txt  Configuration.cpp  Configuration.h  CsvRawData.cpp  CsvRawData.h  CsvReader.cpp  CsvReader.h  DataModel.cpp  DataModel.h  DynamicForm.cpp  DynamicForm.h  EditorPage.cpp  EditorPage.h  EditorPage.ui  EndpointConfig.cpp  EndpointConfig.h  EndpointConfigEditDlg.cpp  EndpointConfigEditDlg.h  EndpointConfigEditDlg.ui  EndpointConfigItemDelegate.cpp  EndpointConfigItemDelegate.h  EndpointConfigModel.cpp  EndpointConfigModel.h  EndpointSelector.cpp  EndpointSelector.h  EndpointSelector.ui  InputDropZone.cpp  InputDropZone.h  ListWidgetInput.cpp  ListWidgetInput.h  LoaderPage.cpp  LoaderPage.h  LoaderPage.ui  Main.cpp  Main.qrc  Main.rc  MainInterface.h  MainWindow.cpp  (+15 more)
src/main/icons/breeze/: index.theme
src/mlclient/: CMakeLists.txt  HttpBody.cpp  HttpBody.h  HttpClient.cpp  HttpClient.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpUserDelegate.h  MlClient.cpp  MlClient.h  MlTokens.cpp  MlTokens.h  TestMain.cpp  Tools.cpp  Tools.h
