add_executable(
    mlreader
    Application.cpp
    Application.h
    Configuration.cpp
    Configuration.h
    CsvRawData.cpp
    CsvRawData.h
    CsvReader.cpp
    CsvReader.h
    DataModel.cpp
    DataModel.h
    DynamicForm.cpp
    DynamicForm.h
    EditorPage.cpp
    EditorPage.h
    EditorPage.ui
    EndpointConfig.cpp
    EndpointConfig.h
    EndpointConfigEditDlg.cpp
    EndpointConfigEditDlg.h
    EndpointConfigEditDlg.ui
    EndpointConfigModel.cpp
    EndpointConfigModel.h
    EndpointSelector.cpp
    EndpointSelector.h
    EndpointSelector.ui
    EndpointConfigItemDelegate.cpp
    EndpointConfigItemDelegate.h
    ListWidgetInput.cpp
    ListWidgetInput.h
    LoaderPage.cpp
    LoaderPage.h
    LoaderPage.ui
    Main.cpp
    Main.qrc
    Main.rc
    MainWindow.cpp
    MainWindow.h
    MainWindow.ui
    MlClientTools.cpp
    MlClientTools.h
    PasswordStore.cpp
    PasswordStore.h
    QueryPage.cpp
    QueryPage.h
    QueryPage.ui
    Tools.cpp
    Tools.h
)

configure_mocs(mlreader)

target_link_libraries(
    mlreader
    PRIVATE project_config
            mlclient
            Qt5Keychain::Qt5Keychain
            qtcsv::qtcsv
            Qt5::Core
            Qt5::Widgets
)
